# pa4-rorrArt

./: ishmael.txt  segment.cabal
prepare/: Main.hs
segment/: Main.hs
